Put icon on top of text & prevent icon from overflowing box

--- a/Trillo/starter/css/style.css
+++ b/Trillo/starter/css/style.css
@@ -410,9 +410,12 @@ body {
   padding: 3rem;
   margin-bottom: 3.5rem;
   position: relative;
+  overflow: hidden;
 }
 .review__text {
   margin-bottom: 2rem;
+  z-index: 10;
+  position: relative;
 }
 .review__user {
   display: flex;
@@ -451,6 +454,7 @@ body {
   font-size: 20rem;
   color: var(--color-grey-light-2);
   font-family: sans-serif;
+  z-index: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
